--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -667,6 +667,10 @@
     <Compile Include="Migrations\202002211301531_productmanufacturerid-added-in-productmaster.designer.cs">
       <DependentUpon>202002211301531_productmanufacturerid-added-in-productmaster.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202002251353519_adding-GlobaAPisAndDeliveryService-in-database.cs" />
+    <Compile Include="Migrations\202002251353519_adding-GlobaAPisAndDeliveryService-in-database.designer.cs">
+      <DependentUpon>202002251353519_adding-GlobaAPisAndDeliveryService-in-database.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1490,6 +1494,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202002211301531_productmanufacturerid-added-in-productmaster.resx">
       <DependentUpon>202002211301531_productmanufacturerid-added-in-productmaster.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202002251353519_adding-GlobaAPisAndDeliveryService-in-database.resx">
+      <DependentUpon>202002251353519_adding-GlobaAPisAndDeliveryService-in-database.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
