--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -169,6 +169,7 @@
     <Compile Include="Domain\Auth\AuthUserLoginActivity.cs" />
     <Compile Include="Domain\Auth\AuthUserprofile.cs" />
     <Compile Include="Domain\Auth\Module.cs" />
+    <Compile Include="Domain\Models\GlobalApi.cs" />
     <Compile Include="Domain\Models\OrderSchedule.cs" />
     <Compile Include="Domain\Models\Account.cs" />
     <Compile Include="Domain\Models\AccountAddresses.cs" />
@@ -190,6 +191,7 @@
     <Compile Include="Domain\Models\ProductFiles.cs" />
     <Compile Include="Domain\Models\ProductManufacturer.cs" />
     <Compile Include="Domain\Models\ProductsWebsitesMap.cs" />
+    <Compile Include="Domain\Models\TenantDeliveryService.cs" />
     <Compile Include="Domain\Models\TerminalCommands.cs" />
     <Compile Include="Domain\Models\TerminalCommandsQueue.cs" />
     <Compile Include="Domain\Models\TerminalGeoLocation.cs" />
