--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -17,9 +17,9 @@
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=RegalsLiveV1.1923;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
     <!--Start connection string UMER PC-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Initial Catalog=Warehouse_db; Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=100" />
+    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Initial Catalog=Warehouse_db; Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=100" />-->
     <!--Start connection string Sami PC-->
-    <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-01FKHEO;Initial Catalog=GaneIntranet 1.2120; Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30"/>-->
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-01FKHEO;Initial Catalog=GaneIntranet 1.2120; Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30"/>
   </connectionStrings>
   <appSettings>
     <add key="PAYPAL_RET_URL" value="http://localhost:8006/Test/IPN" />
@@ -36,7 +36,7 @@
     <add key="ContactFormEmailAddress" value="umer@ganedata.co.uk" />
     <add key="SmtpClientUserName" value="email@ganedata.co.uk" />
     <add key="SmtpClientPassword" value="G4n3d474Star" />
-    <add key="SiteId" value="2" />
+    <add key="SiteId" value="1" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -56,9 +56,9 @@
     <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLEXPRESS;Integrated Security=false;User Id=sa;Password=Test@123;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--End session string Naveed PC-->
     <!--Start session string UMER PC-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />
+    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DEVELOPMENT-PC4\MSSQLSERVER01;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300" />-->
     <!--Start session string Sami PC-->
-    <!--<sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-01FKHEO;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300"/>-->
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-01FKHEO;Integrated Security=false;User Id=sa;Password=developer;MultipleActiveResultSets=True;" timeout="300"/>
     
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.6.1" />
