--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -17,7 +17,7 @@
     <AssemblyName>WMS</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -526,6 +526,7 @@
     <Compile Include="Controllers\WebAPI\ApiMerakiScanningController.cs" />
     <Compile Include="CustomBindings\ConsignmentCustomBinding.cs" />
     <Compile Include="CustomBindings\PalletsCustomBinding.cs" />
+    <Compile Include="CustomBindings\LocationListCustomBinding.cs" />
     <Compile Include="CustomBindings\ProductComboboxCustomBinding.cs" />
     <Compile Include="CustomBindings\ProductSerialListCustomBinding.cs" />
     <Compile Include="CustomBindings\OrderSchedulerSettings.cs" />
