--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -18,7 +18,7 @@
     <AssemblyName>WarehouseEcommerce</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <MvcBuildViews>false</MvcBuildViews>
-    <UseIISExpress>true</UseIISExpress>
+    <UseIISExpress>false</UseIISExpress>
     <Use64BitIISExpress />
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -314,7 +314,6 @@
     <Content Include="Areas\Shop\Content\app\img\product\no_image.gif" />
     <Content Include="Areas\Shop\Content\app\img\product\Microware-CHARGING-DOCK-LED-Light-hover.jpg" />
     <Content Include="Areas\Shop\Content\app\img\product\Microware-CHARGING-DOCK-LED-Light.jpg" />
-    <Content Include="Areas\Shop\Content\app\img\product\no_image.PNG" />
     <Content Include="Areas\Shop\Content\app\img\slider\1.png" />
     <Content Include="Areas\Shop\Content\app\img\slider\1.jpg" />
     <Content Include="Areas\Shop\Content\app\img\slider\4.jpg" />
