--- a/WarehouseEcommerce/WarehouseEcommerce.csproj
+++ b/WarehouseEcommerce/WarehouseEcommerce.csproj
@@ -603,6 +603,7 @@
     <Content Include="img\logo\1.png" />
     <Content Include="img\logo\2.png" />
     <Content Include="img\logo\logo.png" />
+    <Content Include="img\logo\logo3.png" />
     <Content Include="img\logo\logo2.png" />
     <Content Include="img\logo\logo1.png" />
     <Content Include="img\portfolio\1.jpg" />
