--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -679,6 +679,10 @@
     <Compile Include="Migrations\202002281453268_accountNumber-in-GlobalApi.designer.cs">
       <DependentUpon>202002281453268_accountNumber-in-GlobalApi.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202003041347367_imagepath-in-tenantDepartment.cs" />
+    <Compile Include="Migrations\202003041347367_imagepath-in-tenantDepartment.designer.cs">
+      <DependentUpon>202003041347367_imagepath-in-tenantDepartment.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
     <Compile Include="IApplicationContext.cs" />
@@ -1511,6 +1515,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202002281453268_accountNumber-in-GlobalApi.resx">
       <DependentUpon>202002281453268_accountNumber-in-GlobalApi.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202003041347367_imagepath-in-tenantDepartment.resx">
+      <DependentUpon>202003041347367_imagepath-in-tenantDepartment.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
